--- a/upload/admin/view/stylesheet/oneall/backend.css
+++ b/upload/admin/view/stylesheet/oneall/backend.css
@@ -151,7 +151,7 @@
     background-position: -1112px -1px;
 }
 
-.oa_social_login_provider_twitter {
+.oa_social_login_provider_old_twitter {
     background-position: -520px -1px;
 }
 
@@ -227,3 +227,12 @@
 .oa_social_login_provider_spotify {
     background-position: -1889px -1px;
 }
+
+.oa_social_login_provider_tiktok {
+    background-position: -1926px -1px;
+}
+
+.oa_social_login_provider_twitter {
+    background-position: -1963px -1px;
+}
+
