--- a/upload/admin/view/stylesheet/oneall/backend.css
+++ b/upload/admin/view/stylesheet/oneall/backend.css
@@ -209,3 +209,7 @@
 .oa_social_login_provider_spotify {
     background-position: -1889px -1px;
 }
+
+.oa_social_login_provider_tiktok {
+    background-position: -1926px -1px;
+}
